# isol8

./: AGENTS.md  Cargo.toml  InstallationLog.txt  LICENSE  README.md  build.rs  install.ps1  install.sh  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.obsidian/: community-plugins.json
_devops/scripts/: package-release.sh  version.sh
_docs/: instructions.md  linux-support.md  macos-support.md  profile-model.md  project-description.md  project-structure.md  testing-strategies.md  windows-support.md
_docs/inbox/: home-config-tools.yaml  home-config-wizard.md  sample-profiles-safehouse.yaml  security-assesment.md  windows-policy-approach.md
_docs/wip/: improvement-points.md  linux-problems.md  linux-review.md  review-agy.md  review-opencode.md  windows-review.md  windows-support.md
crates/isol8-path-policy/: Cargo.toml
crates/isol8-path-policy/src/: lib.rs
crates/isol8-winhook/: Cargo.toml
crates/isol8-winhook/src/: lib.rs
examples/profiles/: claude-skip-permissions.toml
graphify-out/: .graphify_detect.json  .graphify_python  .graphify_root
profiles/: base.toml  linux-system.toml  macos-system.toml  network.toml
profiles/agents/: agy.toml  aider.toml  amp.toml  auggie.toml  claude-code.toml  cline.toml  codex.toml  copilot-cli.toml  cursor-agent.toml  droid.toml  gemini.toml  goose.toml  grok.toml  kilo-code.toml  opencode.toml  pi.toml
profiles/apps/: claude-app.toml  codex-app.toml  vscode-app.toml
profiles/integrations/: 1password.toml  agent-browser.toml  browser-native-messaging.toml  chromium-full.toml  chromium-headless.toml  cleanshot.toml  clipboard.toml  cloud-credentials.toml  cloud-storage.toml  container-runtime-default-deny.toml  docker.toml  electron.toml  git.toml  keychain.toml  kubectl.toml  launch-services.toml  lldb.toml  macos-gui.toml  microphone.toml  playwright-chrome.toml  process-control.toml  scm-clis.toml  shell-init.toml  spotlight.toml  ssh-agent-default-deny.toml  ssh.toml  vscode.toml  worktree-common-dir.toml  worktrees.toml  xcode.toml
profiles/linux/: gui.toml  secret-service.toml  system-runtime.toml
profiles/macos/: system-runtime.toml
profiles/shared/: agent-common.toml  ipc-sysv-sem.toml
profiles/toolchains/: apple-toolchain-core.toml  bun.toml  deno.toml  elixir.toml  go.toml  java.toml  node.toml  perl.toml  php.toml  python.toml  ruby.toml  runtime-managers.toml  rust.toml
profiles/windows/: system-runtime.toml
scripts/: convert-safehouse-profiles.py
src/: cli.rs  config.rs  diag.rs  env.rs  error.rs  filter.rs  home.rs  lib.rs  main.rs  profile.rs  resolve.rs  sandbox.rs
src/backends/: linux.rs  macos.rs  mod.rs  windows.rs  windows_hook.rs  windows_policy.rs
src/cli/: config.rs  diag.rs  mod.rs
tests/: profile_filters.rs  profile_merge.rs  profile_path.rs  windows_spawn.rs
