[package]
name = "isol8"
version = "0.2.0"
edition = "2021"
description = "Lightweight cross-platform isolation sandbox for AI coding agents and CLI tools (deny-by-default)"
default-run = "isol8"
build = "build.rs"

[lib]
name = "isol8"
path = "src/lib.rs"

[[bin]]
name = "isol8"
path = "src/main.rs"

# Real-sandbox field tests (see _docs/testing-strategies.md §3). Run: `just field-test`.
[[bin]]
name = "isol8-field-test"
path = "src/bin/isol8-field-test.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yaml = "0.9"
anyhow = "1"

[build-dependencies]
# build.rs only walks profiles/; no extra deps needed.

# platform backends
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.31", features = ["sched", "mount", "fs", "user"] }
enumflags2 = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Isolation",
  "Win32_Security_Authorization",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_System_Console",
  "Win32_Storage_FileSystem",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

# networking (Phase 3): add proxy/pasta orchestration crates then
