[package]
name = "isol8"
version = "0.2.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/mdnmdn/isol8"
description = "Lightweight cross-platform isolation sandbox for AI coding agents and CLI tools with custom policies"
default-run = "isol8"
build = "build.rs"
authors = ["Marco De Nittis"]

[lib]
name = "isol8"
path = "src/lib.rs"

[[bin]]
name = "isol8"
path = "src/main.rs"
required-features = ["cli"]

# Real-sandbox field tests (see _docs/testing-strategies.md §3). Run: `just field-test`.
[[bin]]
name = "isol8-field-test"
path = "src/bin/isol8-field-test.rs"

[features]
default = ["cli"]
# The CLI binary's arg parsing + YAML config; an embedder using only the engine API
# can drop these with `default-features = false`.
cli = ["dep:clap", "dep:serde_yaml"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_yaml = { version = "0.9", optional = true }
anyhow = "1"
thiserror = "1"

[build-dependencies]
# build.rs only walks profiles/; no extra deps needed.

# platform backends
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.31", features = ["sched", "mount", "fs", "user", "signal"] }
enumflags2 = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Isolation",
  "Win32_System_Threading",
] }

# networking (Phase 3): add proxy/pasta orchestration crates then
